feat: add phonebook implementation

--- a/module_00/ex00/Makefile
+++ b/module_00/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: inwagner <inwagner@student.42sp.org.br>    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/06/03 18:25:54 by inwagner          #+#    #+#              #
+#    Updated: 2024/06/03 18:25:55 by inwagner         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 # Variables
 NAME		:=	megaphone
 SRC			:=	megaphone.cpp
@@ -6,7 +18,9 @@ all:
 	@c++ -Wall -Wextra -Werror -std=c++98 megaphone.cpp -o $(NAME)
 
 clean:
-	echo "nope"
+	@echo "Nothing to be done."
 
 fclean:
-	rm $(NAME)
+	@rm $(NAME)
+
+re: fclean all
