feat: add Bank implementation v1

--- a/module_00/ex02/Makefile
+++ b/module_00/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: inwagner <inwagner@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/09 16:33:11 by inwagner          #+#    #+#              #
-#    Updated: 2024/06/09 16:33:26 by inwagner         ###   ########.fr        #
+#    Updated: 2024/06/10 22:32:37 by inwagner         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,7 +23,7 @@
 # **************************************************************************** #
 
 # TITLE
-NAME	:=	phonebook
+NAME	:=	GlobalBankstersUnited
 
 # PATHS
 SRC		:=	./
