style: update header

--- a/module_01/ex04/Makefile
+++ b/module_01/ex04/Makefile
@@ -1,3 +1,14 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: inwagner <inwagner@student.42sp.org.br>    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/06/16 17:27:32 by inwagner          #+#    #+#              #
+#    Updated: 2024/06/16 17:27:34 by inwagner         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
 # TITLE
 NAME	:=	replacer
