--- a/module_04/ex03/Makefile
+++ b/module_04/ex03/Makefile
@@ -6,7 +6,52 @@
 #    By: inwagner <inwagner@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/19 20:55:18 by inwagner          #+#    #+#              #
-#    Updated: 2024/06/19 20:55:19 by inwagner         ###   ########.fr        #
+#    Updated: 2024/06/29 11:17:09 by inwagner         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
+# TITLE
+NAME	:=	materia
+
+# PATHS
+SRC		:=	./
+HSRC	:=	./
+OSRC	:=	./objs/
+
+# FLAGS
+FLAGS	:=	-Wall -Wextra -Werror -std=c++98 -I $(HSRC)
+
+# OBJECTS
+FTS		:=	main.cpp \
+			AMateria.cpp \
+			Character.cpp \
+			Cure.cpp \
+			Ice.cpp \
+			MateriaSource.cpp
+
+OBJ		:=	$(FTS:%.cpp=$(OSRC)/%.o)
+
+# Compilation
+all: $(NAME)
+
+$(NAME): $(OBJ)
+	@c++ $(OBJ) -o $@
+
+$(OSRC)/%.o: $(SRC)%.cpp
+	@mkdir -p $(@D)
+	@c++ $(FLAGS) -c $< -o $@
+
+val: all
+	@valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ./${NAME} || echo ""
+
+clean:
+	@[ -d ./objs ] && rm -rf ./objs || echo ""
+
+fclean: clean
+	@[ -f ./$(NAME) ] && rm $(NAME) || echo ""
+
+re: fclean all
+
+
+
+.PHONY: all clean fclean re val
