chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,15 @@ claptrap
 zoo
 materia
 bureaucrat
+scalar_converter
+serialization
+base
+whatever
+iter
+array
+easyfind
+span
+mutantstack
+btc
+RPN
+PmergeMe
